# yak-jaego

./: .gitignore  20251023.xls  README.md  app.py  base_db.py  buffer_calculator.py  checked_items_db.py  db_initializer.py  drug_flags_db.py  drug_memos_db.py  drug_order_calculator.py  drug_patient_map_db.py  drug_periodicity_db.py  drug_thresholds_db.py  drug_timeseries_db.py  generate_report.py  generate_single_ma_report.py  generate_volatility_report.py  init_db.py  inventory_db.py  inventory_updater.py  jaego.spec  paths.py  patients_db.py  periodicity_calculator.py  processed_inventory_db.py  pyproject.toml  read_csv.py  read_excel.py  requirements.txt  suggestion_db.py  suggestion_engine.py  test_periodicity.py  user_settings_db.py  utils.py  web_app.py
docs/: DEPENDENCY_GUIDE.md  REFACTORING.md  design-principles.md  frontend-architecture.md  pyinstaller-build-guide.md
periodicity_reports/: periodicity_test_20260102_094856.html
routes/: __init__.py  data.py  drugs.py  inventory.py  main.py  patients.py  reports.py  settings.py  suggestions.py
static/css/: base.css
temp/: migrate_auto_threshold.py
templates/: base.html  data_manage.html  drug_manage.html  error.html  index.html  inventory_edit.html  memo_manage.html  patient_manage.html  patient_suggest.html  threshold_manage.html  workflow_order.html  workflow_simple.html  workflow_timeseries.html  workflow_trash.html  workflow_volatility.html
templates/partials/: _confirm_modal.html  (+4 more)
volatility_reports/: volatility_report_dispense_20260101_151150.html  volatility_report_dispense_20260101_152200.html
(+12 files in other folders)
